--- a/Nutricion/en.lproj/MainStoryboard.storyboard
+++ b/Nutricion/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3dq-nd-kex">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -164,25 +164,14 @@
             </objects>
             <point key="canvasLocation" x="-734" y="506"/>
         </scene>
-        <!--View Controller - Item 2-->
+        <!--Diet View Controller - Item 2-->
         <scene sceneID="biK-TQ-xrf">
             <objects>
-                <viewController id="EIb-S8-Eky" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="calendard" id="EIb-S8-Eky" customClass="DietViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="69M-N5-5fd">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="dos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wx4-3j-AXo">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Wx4-3j-AXo" secondAttribute="bottom" constant="182" id="Ydd-tL-JCX"/>
-                            <constraint firstItem="Wx4-3j-AXo" firstAttribute="leading" secondItem="69M-N5-5fd" secondAttribute="leading" constant="158" id="mrl-UL-Z2W"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="6xt-6W-fry"/>
                 </viewController>
@@ -190,10 +179,101 @@
             </objects>
             <point key="canvasLocation" x="358" y="1094"/>
         </scene>
-        <!--View Controller - Item-->
+        <!--Diet View Controller-->
+        <scene sceneID="h2F-zj-H42">
+            <objects>
+                <viewController storyboardIdentifier="diet" id="aDh-wi-avo" customClass="DietViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yl4-A4-Sv0">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MYa-9o-9K3">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="Zpz-Zj-eo3"/>
+                                    <constraint firstAttribute="width" constant="127" id="mJX-1c-8TD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRC-gY-eUd">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <navigationItem title="Diet" id="3eN-IV-8D2">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Zjp-0o-ebT">
+                                            <connections>
+                                                <action selector="Back1:" destination="aDh-wi-avo" id="GoF-ZW-tvQ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="68" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1Nf-eg-8sw">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="376" id="3Ul-FF-Q0k"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="myCell" rowHeight="68" id="egV-t8-VTM" customClass="MyCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="68"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="67"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n8Y-Rx-89g">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="53" id="dLa-Ui-8fF"/>
+                                                        <constraint firstAttribute="width" constant="89" id="m1a-EH-rQC"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="n8Y-Rx-89g" firstAttribute="leading" secondItem="egV-t8-VTM" secondAttribute="leading" constant="10" id="IKy-UQ-jMz"/>
+                                            <constraint firstItem="n8Y-Rx-89g" firstAttribute="centerY" secondItem="egV-t8-VTM" secondAttribute="centerY" type="default" id="Yfy-37-QON"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="hour" destination="n8Y-Rx-89g" id="bhS-fi-R3L"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="aDh-wi-avo" id="skf-xx-eWR"/>
+                                    <outlet property="delegate" destination="aDh-wi-avo" id="xfd-ep-7g1"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1Nf-eg-8sw" firstAttribute="bottom" secondItem="yl4-A4-Sv0" secondAttribute="bottom" type="default" id="7ud-MU-ux7"/>
+                            <constraint firstItem="DRC-gY-eUd" firstAttribute="leading" secondItem="yl4-A4-Sv0" secondAttribute="leading" type="default" id="9TM-5z-uzf"/>
+                            <constraint firstItem="1Nf-eg-8sw" firstAttribute="trailing" secondItem="yl4-A4-Sv0" secondAttribute="trailing" type="default" id="PN8-C3-rvc"/>
+                            <constraint firstItem="MYa-9o-9K3" firstAttribute="top" secondItem="yl4-A4-Sv0" secondAttribute="top" constant="50" id="YJb-87-6FU"/>
+                            <constraint firstItem="DRC-gY-eUd" firstAttribute="top" secondItem="yl4-A4-Sv0" secondAttribute="top" type="default" id="ZbR-Ia-c5K"/>
+                            <constraint firstItem="1Nf-eg-8sw" firstAttribute="leading" secondItem="yl4-A4-Sv0" secondAttribute="leading" type="default" id="g0v-8C-8nh"/>
+                            <constraint firstAttribute="trailing" secondItem="MYa-9o-9K3" secondAttribute="trailing" constant="9" id="gz6-J9-99Q"/>
+                            <constraint firstItem="DRC-gY-eUd" firstAttribute="trailing" secondItem="yl4-A4-Sv0" secondAttribute="trailing" type="default" id="r2w-um-I6M"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="Navbar" destination="DRC-gY-eUd" id="YfH-FM-jDs"/>
+                        <outlet property="diet" destination="MYa-9o-9K3" id="478-Sy-InM"/>
+                        <outlet property="myTable" destination="1Nf-eg-8sw" id="sYf-OI-DoA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CQ9-V3-Tfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="1094"/>
+        </scene>
+        <!--Diet View Controller - Item-->
         <scene sceneID="eeA-6M-s60">
             <objects>
-                <viewController id="cby-he-xF0" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="calendare" id="cby-he-xF0" customClass="DietViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iJ2-ay-VbV">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -252,10 +332,10 @@
             </objects>
             <point key="canvasLocation" x="374" y="470"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab View Controller-->
         <scene sceneID="6E5-kN-tbN">
             <objects>
-                <tabBarController storyboardIdentifier="tabBar" definesPresentationContext="YES" id="3dq-nd-kex" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" definesPresentationContext="YES" id="3dq-nd-kex" customClass="tabViewController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="uB8-Bx-eNm">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
