--- a/Nutricion/en.lproj/MainStoryboard.storyboard
+++ b/Nutricion/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3dq-nd-kex">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -268,7 +268,92 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CQ9-V3-Tfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="1094"/>
+            <point key="canvasLocation" x="850" y="1094"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="REn-r8-YDv">
+            <objects>
+                <viewController storyboardIdentifier="Info" id="ur6-Od-f05" customClass="DEViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Arh-Ti-nww">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="193" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="XHd-I8-bIq">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="myCell1" rowHeight="193" id="Oxd-DL-yQU" customClass="MyCell1">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="193"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="126" translatesAutoresizingMaskIntoConstraints="NO" id="SI5-jV-8bb">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="126" id="GTX-rC-4YC"/>
+                                                    </constraints>
+                                                    <attributedString key="attributedText"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vh5-r2-aMB">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="133" id="wf2-Pu-4ez"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="SI5-jV-8bb" firstAttribute="bottom" secondItem="Vh5-r2-aMB" secondAttribute="bottom" type="default" id="EG3-as-fRH"/>
+                                            <constraint firstAttribute="trailing" secondItem="SI5-jV-8bb" secondAttribute="trailing" constant="11" id="OlS-Y1-u5U"/>
+                                            <constraint firstItem="SI5-jV-8bb" firstAttribute="top" secondItem="Oxd-DL-yQU" secondAttribute="top" constant="20" type="default" id="XDt-dm-oXv"/>
+                                            <constraint firstItem="SI5-jV-8bb" firstAttribute="centerY" secondItem="Oxd-DL-yQU" secondAttribute="centerY" type="default" id="apy-8L-xTE"/>
+                                            <constraint firstItem="Vh5-r2-aMB" firstAttribute="leading" secondItem="Oxd-DL-yQU" secondAttribute="leading" constant="20" type="default" id="ifR-j9-7gx"/>
+                                            <constraint firstItem="Vh5-r2-aMB" firstAttribute="top" secondItem="Oxd-DL-yQU" secondAttribute="top" constant="20" type="default" id="j7M-ak-sBt"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="image" destination="Vh5-r2-aMB" id="s7G-BE-rqI"/>
+                                            <outlet property="myLabel" destination="SI5-jV-8bb" id="32i-9i-TX0"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ur6-Od-f05" id="gM6-jp-BkY"/>
+                                    <outlet property="delegate" destination="ur6-Od-f05" id="0HG-E5-3jv"/>
+                                </connections>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d7z-n2-lNw">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <navigationItem title="Title" id="cVa-vI-Bwk">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="MLA-Du-yfV">
+                                            <connections>
+                                                <action selector="Back:" destination="ur6-Od-f05" id="SUA-A3-Ogm"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XHd-I8-bIq" firstAttribute="top" secondItem="d7z-n2-lNw" secondAttribute="bottom" type="default" id="2jM-nR-hgX"/>
+                            <constraint firstItem="XHd-I8-bIq" firstAttribute="bottom" secondItem="Arh-Ti-nww" secondAttribute="bottom" type="default" id="Lji-V9-uU8"/>
+                            <constraint firstItem="d7z-n2-lNw" firstAttribute="leading" secondItem="Arh-Ti-nww" secondAttribute="leading" type="default" id="WTE-PU-72d"/>
+                            <constraint firstItem="XHd-I8-bIq" firstAttribute="leading" secondItem="Arh-Ti-nww" secondAttribute="leading" type="default" id="fRI-l4-d9M"/>
+                            <constraint firstItem="XHd-I8-bIq" firstAttribute="trailing" secondItem="Arh-Ti-nww" secondAttribute="trailing" type="default" id="pQ5-Ij-5Ax"/>
+                            <constraint firstItem="d7z-n2-lNw" firstAttribute="trailing" secondItem="Arh-Ti-nww" secondAttribute="trailing" type="default" id="qQ2-fC-dBd"/>
+                            <constraint firstItem="d7z-n2-lNw" firstAttribute="top" secondItem="Arh-Ti-nww" secondAttribute="top" type="default" id="zPe-eA-9O4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="myTable" destination="XHd-I8-bIq" id="DJb-eF-I1y"/>
+                        <outlet property="navBar" destination="cVa-vI-Bwk" id="rLD-SN-6Bk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fNz-WL-yLW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1315" y="1079"/>
         </scene>
         <!--Diet View Controller - Item-->
         <scene sceneID="eeA-6M-s60">
@@ -330,7 +415,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7r-gb-Sph" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="374" y="470"/>
+            <point key="canvasLocation" x="324" y="490"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="6E5-kN-tbN">
@@ -606,6 +691,95 @@
             <point key="canvasLocation" x="803" y="-107"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="DEViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DEViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="Back:"/>
+                <relationship kind="outlet" name="myTable" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="navBar" candidateClass="UINavigationItem"/>
+            </relationships>
+        </class>
+        <class className="DietViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DietViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="Back1:"/>
+                <relationship kind="outlet" name="Navbar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="diet" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="myTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ForgotPassViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ForgotPassViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backButtonPressed:"/>
+                <relationship kind="action" name="registerButtonPressed:"/>
+                <relationship kind="action" name="sendMailPressed:"/>
+                <relationship kind="outlet" name="mailToSend" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="MyCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="hour" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="MyCell1" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyCell1.h"/>
+            <relationships>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="myLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="UserMainViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UserMainViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="logoutButton:"/>
+                <relationship kind="outlet" name="welcomeUser" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backf:"/>
+                <relationship kind="action" name="forgot:"/>
+                <relationship kind="action" name="login:"/>
+                <relationship kind="action" name="reg1:"/>
+                <relationship kind="action" name="reg:"/>
+                <relationship kind="action" name="rememberMe:"/>
+                <relationship kind="action" name="send:"/>
+                <relationship kind="action" name="totti:"/>
+                <relationship kind="outlet" name="fbb" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="mail" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="password" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="rememberMeOutlet" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="username" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="newViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/newViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="back:"/>
+                <relationship kind="action" name="done:"/>
+                <relationship kind="outlet" name="age" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="backButtonOutlet" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="campoActivo" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="height" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="lastname" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="name" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="password" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="username" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="weight" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="tabViewController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/tabViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
